test/functions/resolution/errors/testBadCallCandidates.3.good
testBadCallCandidates.chpl:71: In function 'main':
testBadCallCandidates.chpl:82: error: unresolved call 'foo(42)'
testBadCallCandidates.chpl:59: note: this candidate did not match: foo(x: C)
testBadCallCandidates.chpl:82: note: because actual argument #1 with type 'int(64)'
testBadCallCandidates.chpl:59: note: is passed to formal 'x: C'
testBadCallCandidates.chpl:82: note: other candidates are:
testBadCallCandidates.chpl:62: note:   foo(x: D)
note: and 2 other candidates, use --print-all-candidates to see them
